generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Company {
  id        String   @id @default(uuid())
  name      String
  timezone  String?  
  users     User[]
  roles     Role[]
  projects  Project[]
  vendors   Vendor[]
  categories CostCategory[]
  subcategories CostSubcategory[]
  costCodes CostCode[]
  audits    AuditEvent[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model User {
  id          String   @id @default(uuid())
  companyId   String
  company     Company  @relation(fields: [companyId], references: [id])
  email       String   @unique
  name        String
  status      String   @default("invited")
  lastLoginAt DateTime?
  roles       UserRole[]
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}

model Role {
  id        String   @id @default(uuid())
  companyId String
  company   Company  @relation(fields: [companyId], references: [id])
  name      String
  permissions Json?
  users     UserRole[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model UserRole {
  userId String
  roleId String
  user   User @relation(fields: [userId], references: [id])
  role   Role @relation(fields: [roleId], references: [id])

  @@id([userId, roleId])
}

model Project {
  id         String   @id @default(uuid())
  companyId  String
  company    Company  @relation(fields: [companyId], references: [id])
  name       String
  address    String?
  status     String   @default("planning")
  startDate  DateTime?
  endDate    DateTime?
  budgetTotal Decimal? @db.Decimal(12,2)
  notes      String?
  tasks      Task[]
  budgetItems BudgetItem[]
  expenses   Expense[]
  bids       Bid[]
  documents  Document[]
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
}

model Task {
  id         String   @id @default(uuid())
  projectId  String
  project    Project  @relation(fields: [projectId], references: [id])
  title      String
  description String?
  status     String   @default("todo")
  dueDate    DateTime?
  assigneeId String?
  orderIndex Int      @default(0)
  expenses   Expense[]
  documents  Document[]
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
}

model CostCategory {
  id        String   @id @default(uuid())
  companyId String
  company   Company  @relation(fields: [companyId], references: [id])
  name      String
  subcategories CostSubcategory[]
  budgetItems BudgetItem[]
  expenses  Expense[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model CostSubcategory {
  id        String   @id @default(uuid())
  companyId String
  company   Company  @relation(fields: [companyId], references: [id])
  categoryId String
  category  CostCategory @relation(fields: [categoryId], references: [id])
  name      String
  budgetItems BudgetItem[]
  expenses  Expense[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model CostCode {
  id        String   @id @default(uuid())
  companyId String
  company   Company  @relation(fields: [companyId], references: [id])
  code      String
  description String?
  budgetItems BudgetItem[]
  expenses  Expense[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model BudgetItem {
  id            String   @id @default(uuid())
  projectId     String
  project       Project  @relation(fields: [projectId], references: [id])
  categoryId    String
  category      CostCategory @relation(fields: [categoryId], references: [id])
  subcategoryId String?
  subcategory   CostSubcategory? @relation(fields: [subcategoryId], references: [id])
  costCodeId    String?
  costCode      CostCode? @relation(fields: [costCodeId], references: [id])
  amount        Decimal   @db.Decimal(12,2)
  notes         String?
  bids          Bid[]
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt
}

model Vendor {
  id        String   @id @default(uuid())
  companyId String
  company   Company  @relation(fields: [companyId], references: [id])
  name      String
  email     String?
  phone     String?
  type      String   @default("subcontractor")
  expenses  Expense[]
  bids      Bid[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Expense {
  id            String   @id @default(uuid())
  projectId     String
  project       Project  @relation(fields: [projectId], references: [id])
  vendorId      String?
  vendor        Vendor?  @relation(fields: [vendorId], references: [id])
  categoryId    String
  category      CostCategory @relation(fields: [categoryId], references: [id])
  subcategoryId String?
  subcategory   CostSubcategory? @relation(fields: [subcategoryId], references: [id])
  costCodeId    String?
  costCode      CostCode? @relation(fields: [costCodeId], references: [id])
  taskId        String?
  task          Task?     @relation(fields: [taskId], references: [id])
  amount        Decimal   @db.Decimal(12,2)
  expenseDate   DateTime
  description   String?
  status        String    @default("recorded")
  approvedBy    String?
  approvedAt    DateTime?
  documents     Document[]
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt
}

model Bid {
  id        String   @id @default(uuid())
  projectId String
  project   Project  @relation(fields: [projectId], references: [id])
  vendorId  String?
  vendor    Vendor?  @relation(fields: [vendorId], references: [id])
  amount    Decimal? @db.Decimal(12,2)
  status    String   @default("received")
  linkedBudgetItemId String?
  linkedBudgetItem   BudgetItem? @relation(fields: [linkedBudgetItemId], references: [id])
  notes     String?
  documents Document[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Document {
  id        String   @id @default(uuid())
  projectId String
  project   Project  @relation(fields: [projectId], references: [id])
  fileName  String
  fileType  String
  fileSize  Int
  storageKey String
  uploadedBy String?
  linkedEntityType String?
  linkedEntityId String?
  tags      String[]
  version   Int      @default(1)
  taskId    String?
  task      Task?    @relation(fields: [taskId], references: [id])
  expenseId String?
  expense   Expense? @relation(fields: [expenseId], references: [id])
  bidId     String?
  bid       Bid?     @relation(fields: [bidId], references: [id])
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model AuditEvent {
  id        String   @id @default(uuid())
  companyId String
  company   Company  @relation(fields: [companyId], references: [id])
  actorId   String?
  entityType String
  entityId  String
  action    String
  diff      Json?
  createdAt DateTime @default(now())
}
